example/secondfile/objects/DHStatus_Ethernet_Specific_Data__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-Ethernet Specific Data</description>
    <fields>
        <fullName>Activation_Status__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-Ethernet Specific Data-Activation Status</description>
        <label>Activation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Network_VLAN_ID_Bottom__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-Ethernet Specific Data-VLAN Tag Data-CF Network VLAN ID Bottom</description>
        <label>CF Network VLAN ID Bottom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Network_VLAN_ID_Top__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-Ethernet Specific Data-VLAN Tag Data-CF Network VLAN ID Top</description>
        <label>CF Network VLAN ID Top</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_VLAN_ID_Bottom__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-Ethernet Specific Data-VLAN Tag Data-Customer VLAN ID Bottom</description>
        <label>Customer VLAN ID Bottom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_VLAN_ID_Top__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-Ethernet Specific Data-VLAN Tag Data-Customer VLAN ID Top</description>
        <label>Customer VLAN ID Top</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Connection_Level_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-Ethernet Specific Data-DHStatus-Connection Level Data</description>
        <label>DHStatus-Connection Level Data</label>
        <referenceTo>DHStatus_Connection_Level_Data__c</referenceTo>
        <relationshipLabel>DHStatus-Ethernet Specific Data</relationshipLabel>
        <relationshipName>DHStatus_Ethernet_Specific_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Connection_ID__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-Ethernet Specific Data-External Connection ID</description>
        <label>External Connection ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_Network_VLAN_ID_Bottom__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-Ethernet Specific Data-VLAN Tag Data-NF Network VLAN ID Bottom</description>
        <label>NF Network VLAN ID Bottom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_Network_VLAN_ID_Top__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-Ethernet Specific Data-VLAN Tag Data-NF Network VLAN ID Top</description>
        <label>NF Network VLAN ID Top</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PVC_Id__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-Ethernet Specific Data-PVC Id</description>
        <label>PVC Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USO_Number__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-Ethernet Specific Data-USO Number</description>
        <label>USO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Ethernet Specific Data</label>
    <nameField>
        <displayFormat>ESD-{0000}</displayFormat>
        <label>DHStatus-Ethernet Specific Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Ethernet Specific Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>